# magnit-test

./: .gitignore  Makefile  README.md  pyproject.toml  specification.md
doc/: api.yaml
magnit_test/: app.py  exceptions.py  middlewares.py  models.py  storages.py  urls.py  utils.py  views.py
tests/: conftest.py  test_views.py
